add models for cart, wishlist, category, product and add to admin

--- a/home/templates/deal.html
+++ b/home/templates/deal.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!-- Deal Area Start -->
     <div class="deal-area pb-100px pt-100px">
         <div class="container ">
             <div class="row">
                 <div class="col-12">
                     <div class="deal-inner deal-bg position-relative ptb-80px"
-                        data-bg-image="assets/images/deal-img/deal-bg.jpg">
+                        data-bg-image="{% static 'images/deal-img/deal-bg.jpg' %}">
                         <div class="deal-wrapper">
                             <h3 class="title">Handmade Pen Holder <br>
                                 & Offer Sale -20% </h3>
@@ -15,7 +16,7 @@
                             <a href="single-product-variable.html" class="btn btn-lg btn-primary">Add To Cart</a>
                         </div>
                         <div class="deal-image">
-                            <img class="img-fluid" src="assets/images/deal-img/woman.png" alt="">
+                            <img class="img-fluid" src="{% static 'images/deal-img/woman.png' %}" alt="">
                             <div class="discount">
                                 <h3>-20%</h3>
                             </div>
