--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -10,20 +12,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Add site Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico'%}" type="image/png">
 
 
     <!-- vendor css (Icon Font) -->
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/vendor/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="assets/css/vendor/font.awesome.css" />
+    <link rel="stylesheet" href="{% static 'css/vendor/bootstrap.bundle.min.css'%}" />
+    <link rel="stylesheet" href="{% static 'css/vendor/pe-icon-7-stroke.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/vendor/font.awesome.css' %}" />
 
     <!-- plugins css (All Plugins Files) -->
-    <link rel="stylesheet" href="assets/css/plugins/animate.css" />
-    <link rel="stylesheet" href="assets/css/plugins/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins/jquery-ui.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins/nice-select.css" />
-    <link rel="stylesheet" href="assets/css/plugins/venobox.css" />
+    <link rel="stylesheet" href="{% static 'css/plugins/animate.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/plugins/swiper-bundle.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/plugins/jquery-ui.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/plugins/nice-select.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
     <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css" />
@@ -31,7 +33,7 @@
     <link rel="stylesheet" href="assets/css/style.min.css"> -->
 
     <!-- Main Style -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
 </head>
 
@@ -79,23 +81,23 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/zoom-image/1.jpg" alt="">
+                                            src="{% static 'images/product-image/zoom-image/1.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/zoom-image/2.jpg" alt="">
+                                            src={% static 'images/product-image/zoom-image/2.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/zoom-image/3.jpg" alt="">
+                                            src="{% static 'images/product-image/zoom-image/3.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/zoom-image/4.jpg" alt="">
+                                            src="{% static 'images/product-image/zoom-image/4.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/zoom-image/5.jpg" alt="">
+                                            src="{% static 'images/product-image/zoom-image/5.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -103,23 +105,23 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/small-image/1.jpg" alt="">
+                                            src="{% static 'images/product-image/small-image/1.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/small-image/2.jpg" alt="">
+                                            src="{% static 'images/product-image/small-image/2.jpg' %}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/small-image/3.jpg" alt="">
+                                            src="{% static 'images/product-image/small-image/3.jpg'%}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/small-image/4.jpg" alt="">
+                                            src="{% static 'images/product-image/small-image/4.jpg'%}" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img class="img-responsive m-auto"
-                                            src="assets/images/product-image/small-image/5.jpg" alt="">
+                                            src="{% static 'images/product-image/small-image/5.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -197,7 +199,7 @@
                                     </ul>
                                 </div>
                                 <div class="payment-img">
-                                    <a href="#"><img src="/images//icons/payment.png" alt=""></a>
+                                    <a href="#"><img src="{% static 'images/icons/payment.png'%}" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -211,28 +213,28 @@
     <!-- Global Vendor, plugins JS -->
 
     <!-- Vendor JS -->
-    <script src="/js/vendor/jquery-3.5.1.min.js"></script>
+    <script src="{% static 'js/vendor/jquery-3.5.1.min.js'%}"></script>
 
-    <script src="/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="{% static 'js/vendor/bootstrap.bundle.min.js'%}"></script>
+    <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js'%}"></script>
+    <script src="{% static 'js/vendor/modernizr-3.11.2.min.js'%}"></script>
 
     <!--Plugins JS-->
-    <script src="/js/plugins/swiper-bundle.min.js"></script>
-    <script src="/js/plugins/jquery-ui.min.js"></script>
-    <script src="/js/plugins/jquery.nice-select.min.js"></script>
-    <script src="/js/plugins/countdown.js"></script>
-    <script src="/js/plugins/scrollup.js"></script>
-    <script src="/js/plugins/jquery.zoom.min.js"></script>
-    <script src="/js/plugins/venobox.min.js"></script>
-    <script src="/js/plugins/ajax-mail.js"></script>
+    <script src="{% static 'js/plugins/swiper-bundle.min.js'%}"></script>
+    <script src="{% static 'js/plugins/jquery-ui.min.js'%}"></script>
+    <script src="{% static 'js/plugins/jquery.nice-select.min.js'%}"></script>
+    <script src="{% static 'js/plugins/countdown.js'%}"></script>
+    <script src="{% static 'js/plugins/scrollup.js'%}"></script>
+    <script src="{% static 'js/plugins/jquery.zoom.min.js'%}"></script>
+    <script src="{% static 'js/plugins/venobox.min.js'%}"></script>
+    <script src="{% static 'js/plugins/ajax-mail.js'%}"></script>
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
     <!-- <script src="assets/js/vendor/vendor.min.js"></script>
     <script src="assets/js/plugins/plugins.min.js"></script> -->
 
     <!-- Main Js -->
-    <script src="/js/main.js"></script>
+    <script src="{% static 'js/main.js'%}"></script>
 </body>
 
 </html>
