--- a/home/templates/deal.html
+++ b/home/templates/deal.html
@@ -1,29 +1,28 @@
-{% load static %}
 <!-- Deal Area Start -->
-    <div class="deal-area pb-100px pt-100px">
-        <div class="container ">
-            <div class="row">
-                <div class="col-12">
-                    <div class="deal-inner deal-bg position-relative ptb-80px"
-                        data-bg-image="{% static 'images/deal-img/deal-bg.jpg' %}">
-                        <div class="deal-wrapper">
-                            <h3 class="title">Handmade Pen Holder <br>
-                                & Offer Sale -20% </h3>
-                            <span class="price">
-                                <span class="old"> <del>$25.00</del></span>
-                                <span class="new">- $18.00</span>
-                            </span>
-                            <a href="single-product-variable.html" class="btn btn-lg btn-primary">Add To Cart</a>
-                        </div>
-                        <div class="deal-image">
-                            <img class="img-fluid" src="{% static 'images/deal-img/woman.png' %}" alt="">
-                            <div class="discount">
-                                <h3>-20%</h3>
-                            </div>
+<div class="deal-area pb-100px pt-100px">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="deal-inner deal-bg position-relative ptb-80px"
+                     data-bg-image="{{ discounted_products.first.category.icon.url }}">
+                    <div class="deal-wrapper">
+                        <h3 class="title">{{ discounted_products.first.name }} <br>
+                            & Offer Sale - {{ discounted_products.first.discount_percentage|default:0 }}%</h3>
+                        <span class="price">
+                            <span class="old"> <del>${{ discounted_products.first.price|floatformat:2 }}</del></span>
+                            <span class="new">- ${{ discounted_products.first.final_price|floatformat:2 }}</span>
+                        </span>
+                        <a href="{% url 'add_to_cart' discounted_products.first.id %}" class="btn btn-lg btn-primary">Add To Cart</a>
+                    </div>
+                    <div class="deal-image">
+                        <img class="img-fluid" src="{{ discounted_products.first.photo.url }}" alt="{{ discounted_products.first.name }}">
+                        <div class="discount">
+                            <h3>-{{ discounted_products.first.discount_percentage|default:0 }}%</h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Deal Area End -->
+</div>
+<!-- Deal Area End -->
