--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -4,54 +4,35 @@
     <div class="hero-slider swiper-container slider-nav-style-1 slider-dot-style-1">
         <!-- Hero slider Active -->
         <div class="swiper-wrapper">
-            <!-- Single slider item -->
+            {% for product in discounted_products|slice:":3" %}
             <div class="hero-slide-item slider-height swiper-slide d-flex bg-color1" data-bg-image="{% static 'images/slider-image/slider-bg-1.jpg' %}">
                 <div class="container align-self-center">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 align-self-center sm-center-view">
                             <div class="hero-slide-content slider-animated-1">
-                                <h2 class="title-1">Best Handmade <br class="d-sm-none"> Goods</h2>
+                                <h2 class="title-1">{{ product.name }}</h2>
                                 <span class="price">
-                                    <span class="old"> <del>$25.00</del></span>
-                                    <span class="new">- $18.00</span>
+                                    {% if product.discount_price %}
+                                        <span class="old"><del>${{ product.price }}</del></span>
+                                        <span class="new">- ${{ product.discount_price }}</span>
+                                    {% else %}
+                                        <span>${{ product.price }}</span>
+                                    {% endif %}
                                 </span>
-                                <a href="shop-left-sidebar.html" class="btn btn-primary m-auto text-uppercase">View Collection</a>
+                                <a href="{% url 'product_detail' product.id %}" class="btn btn-primary m-auto text-uppercase">View Collection</a>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center position-relative">
                             <div class="show-case">
                                 <div class="hero-slide-image">
-                                    <img src="{% static 'images/slider-image/slider-1.png' %}" alt="" />
+                                    <img src="{{ product.photo.url }}" alt="{{ product.name }}" />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Single slider item -->
-            <div class="hero-slide-item slider-height swiper-slide d-flex bg-color1" data-bg-image="{% static 'images/slider-image/slider-bg-1.jpg' %}">
-                <div class="container align-self-center">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 align-self-center sm-center-view">
-                            <div class="hero-slide-content slider-animated-1">
-                                <h2 class="title-1">Best Handmade <br class="d-sm-none"> Goods</h2>
-                                <span class="price">
-                                    <span class="old"> <del>$25.00</del></span>
-                                    <span class="new">- $18.00</span>
-                                </span>
-                                <a href="shop-left-sidebar.html" class="btn btn-primary m-auto text-uppercase">View Collection</a>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center position-relative">
-                            <div class="show-case">
-                                <div class="hero-slide-image">
-                                    <img src="{% static 'images/slider-image/slider-2.png' %}" alt="" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination swiper-pagination-white"></div>
