--- a/home/templates/banner.html
+++ b/home/templates/banner.html
@@ -1,45 +1,16 @@
-{% load static %}
-<!-- Banner Area Start -->
-<div class="banner-area pt-100px pb-100px">
-    <div class="container">
-        <div class="row">
-            <div class="single-col">
-                <div class="single-banner">
-                    <img src="{% static 'images/banner/1.jpg' %}" alt="">
-                    <div class="banner-content">
-                        <span class="category">Best Seller</span>
-                        <span class="title">Flower Vase <br>
-                            & Poot</span>
-                        <a href="shop.html" class="shop-link btn btn-primary text-uppercase">Shop
-                            Now</a>
-                    </div>
+<div class="container">
+    <div class="row">
+        {% for product in discounted_products|slice:":3" %}
+        <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="product-item">
+                <div class="product-thumb">
+                    <a href="{% url 'single_product' product.id %}"><img src="{{ product.photo.url }}" alt="{{ product.name }}"></a>
                 </div>
-            </div>
-            <div class="single-col center-col">
-                <div class="single-banner">
-                    <img src="{% static 'images/banner/2.jpg' %}" alt="">
-                    <div class="banner-content">
-                        <span class="category">Best Seller</span>
-                        <span class="title">Wool Silk Dress <br>
-                            & Offer 2021</span>
-                        <a href="shop.html" class="shop-link btn btn-primary text-uppercase">Shop
-                            Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="single-col">
-                <div class="single-banner">
-                    <img src="{% static 'images/banner/3.jpg' %}" alt="">
-                    <div class="banner-content">
-                        <span class="category">Best Seller</span>
-                        <span class="title">Pen Holder<br>
-                            & Poot</span>
-                        <a href="shop.html" class="shop-link btn btn-primary text-uppercase">Shop
-                            Now</a>
-                    </div>
+                <div class="product-content">
+                    <h4><a href="{% url 'single_product' product.id %}">Buy now</a></h4>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
-<!-- Banner Area End -->
