--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="zxx">
@@ -201,34 +202,66 @@
             </div>
         </div>
     </div>
-    <!-- Product Description Area End -->
-
-
-        <div class="related-products">
-        <h2>Related Products</h2>
-        <div class="product-grid">
-            {% for product in related_products %}
-            <div class="product-card">
-                <img src="{{ product.photo.url }}" alt="{{ product.name }}">
-    
-                <h3>{{ product.name }}</h3>
-                <p>
-                    {% if product.discount_price %}
-                        <span class="discounted-price">${{ product.discount_price }}</span>
-                        <span class="original-price"><del>${{ product.price }}</del></span>
-                    {% else %}
-                        <span class="price">${{ product.price }}</span>
-                    {% endif %}
-                </p>
-    
-                <a href="#" class="add-to-cart-button">Add to cart</a>
+     <!-- Related product Area Start -->
+    <div class="related-product-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title text-center line-height-1">
+                        <h2 class="title">Related Products</h2>
+                        <p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                </div>
             </div>
-            {% endfor %}
+            <div class="new-product-slider swiper-container slider-nav-style-1 pb-100px">
+                <div class="new-product-wrapper swiper-wrapper">
+                    {% for product in related_products %}
+                    <div class="new-product-item swiper-slide">
+                        <div class="product">
+                            <div class="thumb">
+                                <a href="single-product/{{ product.id }}" class="image">
+                                    <img src="{{ product.image.url }}" alt="{{ product.name }}" />
+                                    <img class="hover-image" src="{{ product.image.url }}" alt="{{ product.name }}" />
+                                </a>
+                                <div class="actions">
+                                    <a href="wishlist.html" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
+                                    <a href="compare.html" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <span class="ratings">
+                                    <span class="rating-wrap">
+                                        <span class="star" style="width:{{ product.average_rating|floatformat:1|multiply:20 }}%"></span>
+                                    </span>
+                                    <span class="rating-num">({{ product.rating }} Review)</span>
+                                </span>
+                                <h5 class="title"><a href="single-product/{{ product.id }}">{{ product.name }}</a></h5>
+                                <span class="price">
+                                    {% if product.discount_price %}
+                                        <span class="new">${{ product.discount_price }}</span>
+                                        <span class="old">${{ product.price }}</span>
+                                    {% else %}
+                                        <span class="new">${{ product.price }}</span>
+                                    {% endif %}
+                                </span>
+                            </div>
+                            <button title="Add To Cart" class="add-to-cart">Add To Cart</button>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <!-- Add Arrows -->
+                <div class="swiper-buttons">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
         </div>
     </div>
 
-
-
+    
     {%include "includes/footer.html"  %}
 
     <!-- Search Modal Start -->
