--- a/home/templates/includes/footer.html
+++ b/home/templates/includes/footer.html
@@ -1,41 +1,36 @@
 {% load static %}
-<div class="newsletter-area ">
+<div class="newsletter-area">
     <div class="container line-shape-bottom">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="newsletter-content mb-lm-30px">
                     <i class="pe-7s-mail-open-file"></i>
                     <div class="newsletter-text">
-                        <h3 class="title">Newsletter & Get Updates</h3>
-                        <p>Sign up for our newsletter to get update from us</p>
+                        <h3 class="title">Subscribe to our Newsletter & Get Updates</h3>
+                        <p>Sign up for our newsletter to receive updates from us.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="news-letter-form">
-                    <div id="mc_embed_signup" class="subscribe-form">
-                        <form id="mc-embedded-subscribe-form" class="validate" novalidate="" target="_blank"
-                            name="mc-embedded-subscribe-form" method="post"
-                            action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
-                            <div id="mc_embed_signup_scroll" class="mc-form">
-                                <input class="email" type="email" required=""
-                                    placeholder="Enter Your Mail Here......." name="EMAIL" value="">
-                                <div class="mc-news d-none" aria-hidden="true">
-                                    <input type="text" value="" tabindex="-1"
-                                        name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef">
-                                </div>
-                                <div class="clear">
-                                    <button id="mc-embedded-subscribe" class="button" type="submit" name="subscribe"
-                                        value=""> Submit</button>
-                                </div>
+                    <form method="POST" action="{% url 'subscribe_newsletter' %}">
+                        {% csrf_token %}
+                        <div class="mc-form">
+                            {{ form.email }}
+                            <div class="clear">
+                                <button id="mc-embedded-subscribe" class="button" type="submit">Subscribe</button>
                             </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
+                    {% if message %}
+                        <div class="alert alert-info">{{ message }}</div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Footer Area Start -->
 <div class="footer-area">
@@ -43,85 +38,64 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <!-- Start single blog -->
                     <div class="col-md-6 col-sm-6 col-lg-3 mb-md-30px mb-lm-30px">
                         <div class="single-wedge">
                             <h4 class="footer-herading">Information</h4>
                             <div class="footer-links">
                                 <div class="footer-row">
                                     <ul class="align-items-center">
-                                        <li class="li"><a class="single-link" href="about.html">About us</a></li>
-                                        <li class="li"><a class="single-link" href="#">Delivery information</a></li>
-                                        <li class="li"><a class="single-link" href="privacy-policy.html">Privacy Policy</a></li>
-                                        <li class="li"><a class="single-link" href="#">Sales</a></li>
-                                        <li class="li"><a class="single-link" href="#">Terms & Conditions</a></li>
-                                        <li class="li"><a class="single-link" href="#">Shipping Policy</a></li>
-                                        <li class="li"><a class="single-link" href="#">EMI Payment</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'about' %}">About us</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'faq' %}">FAQ</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- End single blog -->
-                    <!-- Start single blog -->
                     <div class="col-md-6 col-lg-3 col-sm-6 mb-lm-30px">
                         <div class="single-wedge">
                             <h4 class="footer-herading">Account</h4>
                             <div class="footer-links">
                                 <div class="footer-row">
                                     <ul class="align-items-center">
-                                        <li class="li"><a class="single-link" href="my-account.html"> My account</a></li>
-                                        <li class="li"><a class="single-link" href="cart.html">My orders</a></li>
-                                        <li class="li"><a class="single-link" href="#">Returns</a></li>
-                                        <li class="li"><a class="single-link" href="shop.html">Shipping</a></li>
-                                        <li class="li"><a class="single-link" href="wishlist.html">Wishlist</a></li>
-                                        <li class="li"><a class="single-link" href="#">How Does It Work</a></li>
-                                        <li class="li"><a class="single-link" href="#">Merchant Sign Up</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'account_dashboard' %}">My account</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'checkout' %}">My orders</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'shop' %}">Wishlist</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- End single blog -->
-                    <!-- Start single blog -->
                     <div class="col-md-6 col-lg-2 col-sm-6 mb-sm-30px">
                         <div class="single-wedge">
-                            <h4 class="footer-herading">Store </h4>
+                            <h4 class="footer-herading">Store</h4>
                             <div class="footer-links">
                                 <div class="footer-row">
                                     <ul class="align-items-center">
-                                        <li class="li"><a class="single-link" href="index.html">Affiliate</a></li>
-                                        <li class="li"><a class="single-link" href="shop-left-sidebar.html">Bestsellers</a></li>
-                                        <li class="li"><a class="single-link" href="#">Discount</a></li>
-                                        <li class="li"><a class="single-link" href="#">Latest products</a></li>
-                                        <li class="li"><a class="single-link" href="#">Sale</a></li>
-                                        <li class="li"><a class="single-link" href="#">All Collection</a></li>
-                                        <li class="li"><a class="single-link" href="contact.html">Contact Us</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'shop' %}">Go shopping</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'checkout' %}">My cart</a></li>
+                                        <li class="li"><a class="single-link" href="{% url 'contact' %}">Contact us</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- End single blog -->
-                    <!-- Start single blog -->
                     <div class="col-md-6 col-lg-4 col-md-6 col-sm-6 pl-120px line-shape">
-                        <div class="single-wedge ">
+                        <div class="single-wedge">
                             <h4 class="footer-herading">Contact Us</h4>
                             <div class="footer-links">
-                                <!-- News letter area -->
-                                <p class="mail">If you have any question.please <br>
-                                    contact us at <a href="mailto:demo@example.com">demo@example.com</a> </p>
-                                <p class="address"><i class="pe-7s-map-marker"></i> <span>Your address goes here.
-                                        <br>
-                                        123, Address.</span> </p>
-                                <p class="phone m-0"><i class="pe-7s-phone"></i><span><a href="tel:0123456789">+ 0 123
-                                            456 789</a> <br> <a href="tel:0123456789">+ 0 123 456 789</a></span></p>
-
-                                <!-- News letter area  End -->
+                                <p class="mail">If you have any question, please <br>
+                                    contact us at <a href="mailto:mioca_shop@gmail.com">mioca_shop@gmail.com</a></p>
+                                <p class="address"><i class="pe-7s-map-marker"></i> <span>370 7TH NEW YORK NY 10001-0041 USA</span></p>
+                                <p class="phone m-0">
+                                    <i class="pe-7s-phone"></i>
+                                    <span><a href="tel:+380505033757">+380505033757</a><br>
+                                    <a href="tel:+380687579205">+380687579205</a></span>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <!-- End single blog -->
+
                 </div>
             </div>
         </div>
