--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -40,24 +40,6 @@
 <body>
     {% include 'includes/header.html' %}
 
-    <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Cart</h2>
-                    <!-- breadcrumb-list start -->
-                    <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="../../home/templates/index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Cart</li>
-                    </ul>
-                    <!-- breadcrumb-list end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- breadcrumb-area end -->
-
     {% if cart.items.exists %}
     <!-- Cart Area Start -->
         <div class="cart-main-area pt-100px pb-100px">
@@ -103,10 +85,11 @@
                                                 <td class="product-subtotal">
                                                     ${{ item.quantity|floatformat:2|multiply:item.product.final_price }}
                                                 </td>
-                                                <td class="product-remove">
-                                                    <a href="#"><i class="fa fa-pencil"></i></a>
-                                                    <a href="#"><i class="fa fa-times"></i></a>
-                                                </td>
+                                               <td class="product-remove">
+                                                   <a href="{% url 'remove_from_cart' product.id %}" class="remove-from-cart">
+                                                       <i class="fa fa-times"></i>
+                                                   </a>
+                                               </td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
@@ -143,27 +126,6 @@
     {% endif %}
 
     {% include 'includes/footer.html' %}
-
-    <!-- Search Modal Start -->
-    <div class="modal popup-search-style" id="searchActive">
-        <button type="button" class="close-btn" data-bs-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <div class="modal-overlay">
-            <div class="modal-dialog p-0" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <h2>Search Your Product</h2>
-                        <form class="navbar-form position-relative" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search here...">
-                            </div>
-                            <button type="submit" class="submit-btn"><i class="pe-7s-search"></i></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Search Modal End -->
 
     <!-- Global Vendor, plugins JS -->
     <!-- Vendor JS -->
