--- a/home/templates/product.html
+++ b/home/templates/product.html
@@ -36,7 +36,6 @@
         <div class="row">
             <div class="col">
                 <div class="tab-content mt-60px">
-                    <!-- Вкладки для категорий -->
                     {% for category in categories %}
                     <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="tab-{{ category.slug }}" role="tabpanel" aria-labelledby="tab-{{ category.slug }}">
                         <div class="row">
@@ -55,13 +54,10 @@
                                             {% endif %}
                                         </span>
                                         <div class="actions">
-                                            <a href="{% url 'wishlist' product.id %}" class="action wishlist" title="Wishlist">
+                                            <a href="{% url 'add_to_wishlist' product.id %}" class="action wishlist" title="Wishlist">
                                                 <i class="pe-7s-like"></i>
                                             </a>
-                                            <a href="#" class="action quickview" data-link-action="quickview" title="Quick view" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                                <i class="pe-7s-look"></i>
-                                            </a>
-                                            <a href="{% url 'compare' product.id %}" class="action compare" title="Compare">
+                                            <a href="{% url 'add_to_compare' product.id %}" class="action compare" title="Compare">
                                                 <i class="pe-7s-refresh-2"></i>
                                             </a>
                                         </div>
@@ -83,7 +79,7 @@
                                             <span class="rating-num">({{ product.reviews.count }} Reviews)</span>
                                         </span>
                                     </div>
-                                    <button title="Add To Cart" class="add-to-cart">Add To Cart</button>
+                                    <button title="Add To Cart" class="add-to-cart" data-product-id="{{ product.id }}">Add To Cart</button>
                                 </div>
                             </div>
                             {% endif %}
