--- a/product/templates/shop.html
+++ b/product/templates/shop.html
@@ -35,23 +35,6 @@
 
    {% include 'includes/header.html' %}
 
-    <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Shop</h2>
-                    <!-- breadcrumb-list start -->
-                    <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="../../home/templates/index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Shop</li>
-                    </ul>
-                    <!-- breadcrumb-list end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- breadcrumb-area end -->
     <!-- Sidebar Area Start -->
     <div class="col-lg-3 col-md-12">
         <div class="shop-sidebar-wrap">
@@ -107,6 +90,11 @@
                             <span>Rating: {{ product.average_rating|floatformat:1 }} / 5</span>
                         </div>
                     </div>
+                    <div class="actions">
+                        <a href="{% url 'add_to_wishlist' product.id %}" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
+                        <a href="{% url 'add_to_compare' product.id %}" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
+                    </div>
+                    <button title="Add To Cart" class="add-to-cart" data-product-id="{{ product.id }}">Add To Cart</button>
                 </div>
             </div>
             {% empty %}
@@ -114,29 +102,11 @@
             {% endfor %}
         </div>
     </div>
+    <!-- Products Area End -->
+
 
 {% include 'includes/footer.html' %}
 
-    <!-- Search Modal Start -->
-    <div class="modal popup-search-style" id="searchActive">
-        <button type="button" class="close-btn" data-bs-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <div class="modal-overlay">
-            <div class="modal-dialog p-0" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <h2>Search Your Product</h2>
-                        <form class="navbar-form position-relative" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search here...">
-                            </div>
-                            <button type="submit" class="submit-btn"><i class="pe-7s-search"></i></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Search Modal End -->
 
     <!-- Global Vendor, plugins JS -->
 
