--- a/product/templates/single-product.html
+++ b/product/templates/single-product.html
@@ -26,37 +26,12 @@
     <link rel="stylesheet" href="{% static 'css/plugins/nice-select.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
 
-
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css" />
-    <link rel="stylesheet" href="assets/css/plugins/plugins.min.css" />
-    <link rel="stylesheet" href="assets/css/style.min.css"> -->
-
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
 </head>
 
 <body>
-
     {% include "includes/header.html" %}
-    <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Single Product</h2>
-                    <!-- breadcrumb-list start -->
-                    <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="../../home/templates/index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Product</li>
-                    </ul>
-                    <!-- breadcrumb-list end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- breadcrumb-area end -->
 
     <!-- Product Details Area Start -->
     <div class="product-details-area pt-100px pb-100px">
@@ -78,7 +53,6 @@
                 </div>
                 <!-- Product Images End -->
 
-    
                 <!-- Product Info Start -->
                 <div class="col-lg-6 col-sm-12 col-xs-12" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-details-content quickview-content ml-25px">
@@ -92,7 +66,7 @@
                             </ul>
                         </div>
                         <div class="pro-details-rating-wrap">
-                           <div class="rating-product">
+                            <div class="rating-product">
                                 {% for i in 1|range_filter:5 %}
                                     <i class="fa fa-star{% if average_rating < i %}-o{% endif %}"></i>
                                 {% endfor %}
@@ -105,13 +79,10 @@
                                 <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1" />
                             </div>
                             <div class="pro-details-cart">
-                                <button class="add-cart"> Add To Cart</button>
-                            </div>
-                            <div class="pro-details-cart">
-                                <button class="add-cart buy-button"> Buy It Now</button>
+                                <button class="add-cart" data-product-id="{{ product.id }}">Add To Cart</button>
                             </div>
                             <div class="pro-details-compare-wishlist pro-details-wishlist">
-                                <a href="{% url 'wishlist:add' product.id %}"><i class="pe-7s-like"></i></a>
+                                <a href="{% url 'add_to_wishlist' product.id %}"><i class="pe-7s-like"></i></a>
                             </div>
                         </div>
                         <div class="pro-details-categories-info pro-details-same-style d-flex">
@@ -124,12 +95,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Product Info End -->
             </div>
         </div>
     </div>
     <!-- Product Details Area End -->
-    
+
     <!-- Product Description Area Start -->
     <div class="description-review-area pb-100px" data-aos="fade-up" data-aos-delay="200">
         <div class="container">
@@ -202,7 +172,9 @@
             </div>
         </div>
     </div>
-     <!-- Related product Area Start -->
+    <!-- Product Description Area End -->
+
+    <!-- Related product Area Start -->
     <div class="related-product-area">
         <div class="container">
             <div class="row">
@@ -226,74 +198,40 @@
                                     <img class="hover-image" src="{{ product.image.url }}" alt="{{ product.name }}" />
                                 </a>
                                 <div class="actions">
-                                    <a href="../../wishlist/templates/wishlist.html" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
-                                    <a href="../../compare/templates/compare.html" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
+                                    <a href="single-product/{{ product.id }}" class="action">
+                                        <i class="pe-7s-look"></i>
+                                    </a>
+                                    <a href="{% url 'add_to_wishlist' product.id %}" class="action">
+                                        <i class="pe-7s-like"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="content">
-                                <span class="ratings">
-                                    <span class="rating-wrap">
-                                        <span class="star" style="width:{{ product.average_rating|floatformat:1|multiply:20 }}"></span>
-                                    </span>
-                                    <span class="rating-num">({{ product.rating }} Review)</span>
-                                </span>
-                                <h5 class="title"><a href="single-product/{{ product.id }}">{{ product.name }}</a></h5>
-                                <span class="price">
-                                    {% if product.discount_price %}
-                                        <span class="new">${{ product.discount_price }}</span>
-                                        <span class="old">${{ product.price }}</span>
-                                    {% else %}
-                                        <span class="new">${{ product.price }}</span>
-                                    {% endif %}
-                                </span>
+                                <h3 class="title"><a href="single-product/{{ product.id }}">{{ product.name }}</a></h3>
+                                <div class="pricing-meta">
+                                    <ul>
+                                        <li class="new-price">${{ product.price }}</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <button title="Add To Cart" class="add-to-cart">Add To Cart</button>
                         </div>
                     </div>
                     {% endfor %}
                 </div>
-                <!-- Add Arrows -->
-                <div class="swiper-buttons">
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </div>
+    <!-- Related product Area End -->
 
-    
-    {%include "includes/footer.html" %}
-
-    <!-- Search Modal Start -->
-    <div class="modal popup-search-style" id="searchActive">
-        <button type="button" class="close-btn" data-bs-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <div class="modal-overlay">
-            <div class="modal-dialog p-0" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <h2>Search Your Product</h2>
-                        <form class="navbar-form position-relative" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search here...">
-                            </div>
-                            <button type="submit" class="submit-btn"><i class="pe-7s-search"></i></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Search Modal End -->
-
-    
-    <!-- Global Vendor, plugins JS -->
-
-   <!-- Vendor JS -->
+    {% include "includes/footer.html" %}
+    <!-- Vendor JS -->
     <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/modernizr-3.11.2.min.js' %}"></script>
-    
+
     <!-- Plugins JS -->
     <script src="{% static 'js/plugins/swiper-bundle.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery-ui.min.js' %}"></script>
@@ -303,12 +241,8 @@
     <script src="{% static 'js/plugins/jquery.zoom.min.js' %}"></script>
     <script src="{% static 'js/plugins/venobox.min.js' %}"></script>
     <script src="{% static 'js/plugins/ajax-mail.js' %}"></script>
-    
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <script src="{% static 'js/vendor/vendor.min.js' %}"></script>
-    <script src="{% static 'js/plugins/plugins.min.js' %}"></script> -->
-    
-    <!-- Main Js -->
+
+    <!-- Main JS -->
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 
