--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -36,24 +36,6 @@
 
     {% include 'includes/header.html' %}
 
-    <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Single Product</h2>
-                    <!-- breadcrumb-list start -->
-                    <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="../../home/templates/index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Product</li>
-                    </ul>
-                    <!-- breadcrumb-list end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- breadcrumb-area end -->
-
     <!-- Wishlist Area Start -->
     <div class="cart-main-area pt-100px pb-100px">
         <div class="container">
@@ -88,7 +70,7 @@
                                             </td>
                                             <td class="product-subtotal">${{ item.product.final_price }}</td>
                                             <td class="product-wishlist-cart">
-                                                <a href="#">add to cart</a>
+                                                <a href="{% url 'add_to_cart' product.id %}" class="action">
                                             </td>
                                         </tr>
                                     {% empty %}
@@ -108,27 +90,6 @@
 
 
     {% include 'includes/footer.html' %}
-
-    <!-- Search Modal Start -->
-    <div class="modal popup-search-style" id="searchActive">
-        <button type="button" class="close-btn" data-bs-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        <div class="modal-overlay">
-            <div class="modal-dialog p-0" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <h2>Search Your Product</h2>
-                        <form class="navbar-form position-relative" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search here...">
-                            </div>
-                            <button type="submit" class="submit-btn"><i class="pe-7s-search"></i></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Search Modal End -->
 
     <!-- Global Vendor, plugins JS -->
 
